fixed css spacing around search and logo title

--- a/supportland/css/style_pink.css
+++ b/supportland/css/style_pink.css
@@ -365,9 +365,6 @@
 
 #sp_user_info fieldset {border:1px solid black;padding:1em;font-size:0.9em;}
 
-#sp_logo{display:inline-block;vertical-align:middle;height:19px;width:24px;margin-right:4px;
-                  background:url('../images/supportland_s_logo_sm.png') no-repeat;}
-
 /* Search */
 #sp_search {clear:both;}
 #sp_search_submit{}
